<resources>
    <string name="app_name">GOLANG</string>
    <string name="nama">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_golang">Logo GOLANG</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_process">Signing in…</string>
    <string name="sign_out">Sign Out</string>
    <string name="forget_password">Forget password?</string>
    <string name="not_yet_a_member">Not yet a member? </string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_an_account_progress">Creating account…</string>
    <string name="cari_tempat">Cari tempat …</string>
    <string name="pilih_tempat">Pilih</string>
    <string name="jumlah_wisatawan">Jumlah Wisatawan</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="buat_request">Buat Request</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="nama_tempat">Tempat Wisata</string>
    <string name="tanggal_wisata">Tanggal wisata</string>
    <string-array name="tempat_wisata">
        <item>Coban Tundo 1, 2 &amp; 3</item>
        <item>Coban Rondo</item>
        <item>Coban Pelangi</item>
        <item>Pantai Goa Cina</item>
        <item>Pantai Sendiki</item>
        <item>Gunung Arjuna</item>
        <item>Gunung Bromo</item>
        <item>Paralayang</item>
        <item>Kota Batu</item>
        <item>Jatim Park 1</item>
        <item>Jatim Park 2</item>
        <item>Museum Angkot</item>
        <item>Mata Air Sumber Sirah</item>
        <item>Coban Nirwana</item>
        <item>Pemandian Kalireco</item>
        <item>Teluk Bidadari</item>
        <item>Pantai Batu Bengkung</item>
        <item>Eco Green Park</item>
        <item>Banyu Anjlok</item>
        <item>Pantai Balekambang</item>
        <item>Pantai Sipelot</item>
        <item>Pantai Ngeliyep</item>
        <item>Pantai Kedung Celeng</item>
    </string-array>
    <string name="confirmRequests">confirmRequests</string>
    <string name="TYPE_TOUR_GUIDE">1</string>
    <string name="TYPE_MEMBER">2</string>
    <string name="terima_request">Terima Request</string>
    <string name="MENCARI_TOURGUIDE">Sedang mencari tourguide …</string>
    <string name="KEY_TOUR_GUIDE_REQUEST">KEY_TOUR_GUIDE_REQUEST</string>
    <string name="memuat">Memuat…</string>
    <string name="status_tourguide">Anda Sedang Menjadi Tour Guide</string>
    <string name="REQUEST_STATUS">status</string>
    <string name="CONFIRM_STATUS_ONGOING">ONGOING</string>
    <string name="CONFIRM_STATUS_COMPLETED">COMPLETED</string>
    <string name="nama_member">Nama Member</string>
    <string name="MENEMUKAN_TOURGUIDE">Tour Guide anda:</string>


    <!--String for Firebase Database Key-->
    <string name="members">members</string>
    <string name="idMember">idMember</string>
    <string name="idTourGuide">idTourGuide</string>
    <string name="idMember_status">idMember_status</string>
    <string name="idTourGuide_status">idTourGuide_status</string>
    <string name="TOUR_STATUS_INPROGRESS">INPROGRESS</string>
    <string name="TOUR_STATUS_COMPLETED">COMPLETED</string>
    <string name="tourGuideRequests">tourGuideRequests</string>
    <string name="requestStatus">requestStatus</string>
    <string name="submit">Submit</string>

    <string name="photo">photo</string>
    <string name="ratingPoin">ratingPoin</string>
    <string name="ratingVoter">ratingVoter</string>
    <string name="cancel">Cancel</string>

    <string name="alert_message_tourguide">
        Pastikan pekerjaan anda telah benar-benar selesai dan klien anda sudah menyatakan bahwa Tour sudah selesai.
    </string>
    <string name="selesai">Ya</string>
    <string name="belum_selesai">Tidak</string>
    <string name="one">1</string>
    <string name="belum_terdaftar">Belum terdaftar?</string>
    <string name="daftar_sekarang">Daftar Sekarang.</string>

</resources>
