<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_request_tour_guide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fauza.golang.activity.RequestTourGuideActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="start"
        android:text="@string/nama_tempat"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/tv_nama_tempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingBottom="16dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="16dp"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        tools:text="Nama tempat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="start"
        android:text="@string/jumlah_wisatawan"
        android:textAlignment="textStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:id="@+id/tv_jumlah_wisatawan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/one"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/bt_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_minus"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/bt_plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_plus"
            android:textSize="18sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/tanggal_wisata" />

    <TextView
        android:id="@+id/tv_tanggal_wisata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingBottom="16dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="16dp"
        android:text="@string/pilih_tanggal"
        android:textColor="@color/colorText"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="36sp" />

    <Button
        android:id="@+id/bt_buat_request"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/buat_request"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:theme="@style/AppTheme.Button" />

</LinearLayout>
