<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fauza.golang.activity.DetailTourGuideRequestActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_member"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_nama_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        tools:text="Nama Member Yang Request" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_tempat"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_nama_tempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        tools:text="Nama Tempat" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_wisatawan"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_jumlah_wisatawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        tools:text="Jumlah Wisatawan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_wisata"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_tanggal_wisata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        tools:text="Tanggal Wisata" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/iBt_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_call" />

        <ImageButton
            android:id="@+id/iBt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_message" />


    </LinearLayout>

    <Button
        android:id="@+id/bt_terima_request"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/terima_request"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:theme="@style/AppTheme.Button" />


</LinearLayout>
