<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/status_tourguide" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Data Member" />

    <TextView
        android:id="@+id/tv_nama_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:paddingBottom="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/iBt_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_call" />

        <ImageButton
            android:id="@+id/iBt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_message" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_tempat" />

    <TextView
        android:id="@+id/tv_nama_tempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:paddingBottom="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_wisatawan" />

    <TextView
        android:id="@+id/tv_jumlah_wisatawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:paddingBottom="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_wisata" />

    <TextView
        android:id="@+id/tv_tanggal_wisata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:paddingBottom="10dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bt_selesai_tour"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="Selesai"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:theme="@style/AppTheme.Button" />

</LinearLayout>