<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="start"
        android:text="@string/nama_tempat"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/tv_nama_tempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="start"
        android:text="@string/jumlah_wisatawan"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/tv_jumlah_wisatawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/memuat"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:text="@string/tanggal_wisata" />

    <TextView
        android:id="@+id/tv_tanggal_wisata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/tanggal_wisata"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_status_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        tools:text="Status" />


    <ImageView
        android:id="@+id/imageView_photo_tour_guide"
        android:layout_width="128dp"
        android:layout_height="170dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_nama_tour_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        tools:text="NAMA TOURGUIDE" />

    <TextView
        android:id="@+id/tv_rating_tour_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="RATING TOURGUIDE" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/iBt_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_call"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/iBt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_message"
            android:visibility="invisible" />
    </LinearLayout>


    <Button
        android:id="@+id/bt_cancel_request"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/cancel"
        android:theme="@style/AppTheme.ButtonCancel" />

</LinearLayout>